# Report-Summarizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  UV_README.md  agentic_search.py  docker-compose.yml  preprocess_files.py  pyproject.toml  report_writer.py  retriever.py  simple_report_writer.py  source_integrity_test_001.md
.claude/skills/: agentic-search-guide.md  architecture.md  code-patterns.md  configuration-reference.md  development-setup.md  prompt-engineering.md  rag-retrieval-guide.md  testing-guide.md
Prompt/: agentic_search_prompt.py  auth_source_prompt.py  document_qa_prompt.py  industry_prompt.py  simple_prompt.py  technical_research_prompt.py
Prompt/shared/: language_rules.py  query_format.py  source_integrity.py
State/: agentic_search_state.py  auth_source_state.py  document_qa_state.py  simple_state.py  state.py
Tools/: auth_source_tools.py  document_preprocessors.py  reader_models.py  simple_tools.py  text_navigator.py  tools.py
Utils/: audio_processor.py  embeddings.py  langfuse_tracing.py  pdf_processor.py  selenium_searching_api.py  utils.py
docs/plans/: 2025-01-18-prompt-optimization-design.md  2026-02-23-compress-acceleration-design.md  2026-02-23-compress-acceleration.md
subagent/: agentic_search.py  auth_source_search.py  document_qa.py
tests/: conftest.py  test_agentic_search.py  test_agentic_search_integration.py  test_auth_source_integration.py  test_auth_source_search.py  test_document_preprocessors.py  test_document_qa.py  test_embeddings.py  test_langfuse_tracing.py  test_pdf_processor.py  test_project_config.py  test_prompts.py  test_reader_models.py  test_report_writer.py  test_run_industry_report.py  test_simple_report_writer.py  test_text_navigator.py  test_text_navigator_integration.py  test_utils.py
