[tool.poetry]
package-mode = false

[project]
name = "pdf-parser"
version = "0.1.0"
description = "LangGraph-based Deep Research Agent for automated research report generation"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Core application
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "omegaconf",
    "pydantic",

    # LangChain and related libraries
    "langchain",
    "langchain-community",
    "langchain-core",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langchain-huggingface",
    "langchain-litellm",
    "langchain-classic",
    "langchain-text-splitters",
    "litellm",
    "tavily-python",

    # Data Processing
    "beautifulsoup4",
    "pandas",
    "trafilatura",
    "markdown-it-py",
    "lxml",
    "scikit-learn",

    # Search and Drivers
    "undetected-chromedriver",
    "selenium",
    "requests",
    "psutil",

    # Vector Store and Retrievers
    "chromadb",
    "rank-bm25",

    # Storage
    "minio",

    # Report export (no torch dependency chain)
    "markdown2",
    "weasyprint",
]

[project.optional-dependencies]
# ML packages have torch in their dep tree — installing via poetry WILL override
# NGC's custom PyTorch build. Install these via pip in the Dockerfile instead.
# See Dockerfile for exact install commands.
ml = [
    "sentence-transformers",
    "marker-pdf",
    "funasr",
    "kaldiio",
    "torch-complex",
]
dev = ["ipython"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
