[tool.poetry]
package-mode = false

[project]
name = "pdf-parser"
version = "0.1.0"
description = "LangGraph-based Deep Research Agent for automated research report generation"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Core application
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "omegaconf",
    "pydantic",

    # LangChain and related libraries
    "langchain",
    "langchain-community",
    "langchain-core",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langchain-huggingface",
    "langchain-litellm",
    "langchain-classic",
    "langchain-text-splitters",
    "litellm",
    "tavily-python",

    # Data Processing
    "beautifulsoup4",
    "pandas",
    "trafilatura",
    "markdown-it-py",
    "lxml",
    "scikit-learn",

    # Search and Drivers
    "undetected-chromedriver",
    "selenium",
    "requests",
    "psutil",

    # Vector Store and Retrievers
    "chromadb",
    "rank-bm25",

    # Storage
    "minio",

    # Report export (no torch dependency chain)
    "markdown2",
    "weasyprint",
]

[project.optional-dependencies]
# ML packages have torch in their dep tree — installing via poetry WILL override
# NGC's custom PyTorch build. Install these via pip in the Dockerfile instead.
# See Dockerfile for exact install commands.
ml = [
    "sentence-transformers",
    "marker-pdf",
    "funasr",
    "kaldiio",
    "torch-complex",
]
dev = ["ipython", "pre-commit", "ruff"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "E402",   # module-level import not at top — load_dotenv() must run first
    "T201",   # allow print() — CLI / scripts use it
    "F403",   # star imports — used in prompt modules
    "F405",   # may be undefined from star imports — same reason
    "RUF001", # ambiguous unicode chars — intentional in prompt strings
    "RUF005", # list concatenation style — not worth enforcing
    "B904",   # raise from — gradually adopt
    "B905",   # zip strict — gradually adopt
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF012", "SIM102"]   # test classes use class-level lists; nested ifs are readable
"Prompt/*" = ["RUF001"]            # prompt templates contain unicode by design

[tool.ruff.lint.isort]
known-first-party = ["Prompt", "State", "Tools", "Utils", "subagent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
